fix: adjust spacing in hero component for improved layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,7 +160,7 @@
   }
 
   .hero {
-    @apply w-full flex flex-col text-center gap-8 items-center bg-primary p-16 rounded-4xl relative overflow-hidden before:content-[''] before:absolute before:top-0 before:right-0 before:size-32 before:bg-teal-500/10 before:rounded-bl-full after:content-[''] after:absolute after:bottom-0 after:left-0 after:size-48 after:bg-teal-500/5 after:rounded-tr-full;
+    @apply w-full flex flex-col text-center gap-6 items-center bg-primary p-16 rounded-4xl relative overflow-hidden before:content-[''] before:absolute before:top-0 before:right-0 before:size-32 before:bg-teal-500/10 before:rounded-bl-full after:content-[''] after:absolute after:bottom-0 after:left-0 after:size-48 after:bg-teal-500/5 after:rounded-tr-full;
   }
 
   .hero-subtext {
@@ -168,6 +168,6 @@
   }
 
   .hero-paragraph {
-    @apply text-lg max-w-3xl -mt-2;
+    @apply text-lg max-w-3xl -mt-2 mb-1;
   }
 }
